--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wcreation.sprinklesbakery">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -12,15 +12,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.SprinklesBakery">
+        android:theme="@style/Theme.SprinklesBakery"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".CartActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SprinklesBakery.NoActionBar" />
+        <activity
+            android:name=".ItemViewActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SprinklesBakery.NoActionBar" />
         <activity
             android:name=".UserHome"
             android:exported="true"
-            android:theme="@style/Theme.SprinklesBakery.NoActionBar">
-
-        </activity>
-
+            android:theme="@style/Theme.SprinklesBakery.NoActionBar" />
         <activity
             android:name=".SplashScreen"
             android:exported="true"
@@ -39,7 +44,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
